@@ -1,8 +1,10 @@
-CHANGES - 08/16/2005
+CHANGES - 09/21/2005
 --------------------
 
 CHANGES IN Mini-XML 2.2.3
 
+	- The mxmldoc program now supports --title and --intro
+	  options.
 	- The mxmlLoad*() functions could leak a node on an error
 	  (STR #27)
 	- The mxml_vsnprintf() function could get in an infinite
